charts/sonarr/~develop/validation/compiled/full/sonarr/templates/neworkpolicy.yaml
---
# Source: sonarr/templates/neworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarr
  annotations:
    annotations: enabled
  labels:
    app.kubernetes.io/name: sonarr
    helm.sh/chart: sonarr-2.0.3
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    commonLabels01: enabled
    commonLabels02: enabled
spec:
  ingress:
    - ports:
        - port: 5006
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
              app.kubernetes.io/instance: sonarr
              podLabels: enabled
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
  egress: 
    - ports:
      - port: 8080
        protocol: TCP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
      podLabels: enabled
  policyTypes:
  - Ingress
  - Egress
